feat: finish implementing services for new table structure